<?xml version="1.0"?>
<package>
  <name>urchin_description</name>
  <version>0.0.0</version>
  <description>The urchin_description package</description>

  <maintainer email="jiaxizheng11@gmail.com">jacky</maintainer>

  <license>GNU</license>

  <author email="jiaxizheng11@gmail.com">jacky</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>joint_state_publisher</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rviz</run_depend>

  <export>
  </export>
</package>
